# endoreg-db

./: .devenv-vars.json  .devenv.flake.nix  .env.example  .envrc  .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  .pylintrc  .ruff  COMPLETE_OPTIMIZATION_PROJECT_REPORT.md  CONFIGURATION_GUIDE.md  README.md  TEST_MIGRATION_SUCCESS_SUMMARY.md  TEST_OPTIMIZATION_COMPLETE_IMPLEMENTATION.md  TEST_PERFORMANCE_SUCCESS_SUMMARY.md  TEST_SUITE_OPTIMIZATION_PLAN.md  TEST_SUITE_STATUS_FINAL_REPORT.md  UPLOAD_API_DOCUMENTATION.md  _flake.nix  add_missing_classifications.py  add_missing_interventions.py  admin.py  base_settings.py  celery.py  celery_app.py  depreceated_pip-shell.nix  dev_db.sqlite3-journal  devenv.nix  doc_settings.py  endoreg-db.code-workspace  env_setup.py  example.txt  export_db.sh  fix_endoreg_db_backup_json.py  flake.nix  hello.py  import_db.sh  install_dependencies.py  logger_conf.py  (+20 more)
.devenv/: input-paths.txt  load-exports  nix-eval-cache.db  nix-eval-cache.db-shm  nix-eval-cache.db-wal  profile  run
.devenv/gc/: shell-1-link
.direnv/: devenv-profile-bc9731748db9ed4ddcd5dc20597b9e64222cb388.rc  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: 684dgr65n8li4pnfirls96jigyhvb9rq-source  g5zf1knf2si4rh6d2p1zwqwh9i230h0x-source  hjrwck9gwg5qg7bmc5wpk5dhpnyv8zjf-source  n6filqmf3jbbylgz5xkm5mc70kkp7w3w-source  rf51xyvdxi2hyl0hm3wi8kxqb4rngnyj-source
.github/ISSUE_TEMPLATE/: label-request.yml  label_request.md
case_generator/: case_generator.py
changelogs/: changelog-0.6.4.md
conf/: db.yaml  example.env
conf_template/: default.env
config/settings/: __init__.py  base.py  dev.py  keycloak.py  prod.py  test.py
data/: 2024-12-01_15-38-29.txt  2024-12-02_09-54-29.txt  2024-12-09_09-53-49.txt  2024-12-14_09-38-33.txt  2025-02-18_16-58-29.txt  __init__.py
data copy/: __init__.py
data copy/active_model/: data.yaml
data copy/center/: data.yaml
data copy/endoscope_type/: data.yaml
data copy/endoscopy_processor/: data.yaml
data copy/information_source/: data.yaml
data copy/model_type/: data.yaml
dev/: cg.py  dev_settings.py  dev_settings_root.py  dev_tasks.md  explore_legacy_frames.py  test_model.py  video_utils.py
devlog/: 00 - bleeding-risk.md  01 - model_documentation.md  02 - patient_model_manual.md  03 - requirement_model_manual.md  model_documentation.md  patient_model_manual.md
docs/: FRAME_ANONYMIZATION.md  REQUIREMENT_SYSTEM_GUIDE.md  TEST_OPTIMIZATION_MIGRATION_GUIDE.md  TEST_PERFORMANCE_OPTIMIZATION_GUIDE.md  VIDEO_CORRECTION_MODULES.md
endoreg_db/: DEPRECATED_urls.py  admin.py  api_urls.py  apps.py  exceptions.py  logger_conf.py  renames.yml  root_urls.py  translation.py  urls.py
forms/: __init__.py  patient_finding_intervention_form.py
mermaid/: Overall_flow_patient_finding_intervention.md  interventions.md  morphology.md
migrations/: 0003_patientexaminationindication.py  0004_patientexaminationindication_indication_choice_and_more.py  0006_remove_numericvaluedistribution_max_value_and_more.py  0009_videosegmentationlabel_alter_rawpdffile_file_and_more.py  0010_sensitivemeta_center_sensitivemeta_examination_hash_and_more.py  0012_alter_rawpdffile_file_alter_rawvideofile_file.py  0013_lxclienttag_lxclienttype_lxidentitytype_lxpermission_and_more.py  0015_lxclient_vpn_ip_alter_rawpdffile_file_and_more.py  0016_alter_rawpdffile_file_alter_rawvideofile_file.py  0017_alter_rawpdffile_file_alter_rawvideofile_file.py  0018_alter_rawpdffile_file_alter_rawvideofile_file.py  0019_alter_patient_dob_alter_patient_first_name_and_more.py
queries/: __init__.py
scripts/: demo_frame_cleaning.py  django_setup.py  make_conf.py  models_table.py  requirement_dev.py  test_performance_demo.py  video_splitter.py
secrets/: poetry.yaml
serializers/: ai_model.py  annotation.py  center.py  examination.py  frame.py  hardware.py  label.py  patient.py  patient_finding_interventions.py  prediction.py  report_file.py  video.py
source/: conf.py  index.rst
test_reports/: center.txt  dataloader.txt  diseases.txt  endoscope.txt  events.txt  green_endoscopy.txt  lx_client_types.txt  lx_permissions.txt  medications.txt  patient_diseases.txt  patient_events.txt  patient_examination_indications.txt  patient_examinations.txt  patient_finding_locations.txt  patient_finding_morphologies.txt  patient_findings.txt  patient_interventions.txt  patient_lab_samples.txt  patient_medications.txt  patients.txt  units.txt
tests/: conftest.py  models.py  settings_test.py  test_anonymization_overview.py  test_center.py  test_pipe2_import.py  test_secure_url_validate_direct.py  test_segment_annotation_flow.py  test_settings.py  test_upload_api.py  test_video_import_service.py  test_video_pipeline.py  test_video_segmentation_views.py  to-do.md
utils/: __init__.py  cropping.py  ocr.py
views/: __init__.py  examination_views.py  patient_finding_intervention_views.py  patient_views.py  report_views.py
(+1747 files in other folders)
