[project]
name = "endoreg-db"
version = "0.6.2"
description = "EndoReg Db Django App"
readme = "README.md"
authors = [
    { name = "Thomas J. Lux", email = "lux_t1@ukw.de" },
    { name = "Max Hild" },
    { name = "Hamza Zahid" },
    { name = "Peter Kowalczyk" },
]
maintainers = [
    { name = "Thomas J. Lux", email = "lux_t1@ukw.de" },
    { name = "Max Hild" },
    { name = "Hamza Zahid" },
    { name = "Peter Kowalczyk" },
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",

    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

requires-python = ">=3.11"
dependencies = [
    "agl-report-reader>=0.4.0",
    "django-bootstrap5>=24.3",
    "django-cors-headers>=4.7.0",
    "django-extensions>=3.2.3",
    "django>=5.1.3",
    "djangorestframework>=3.15.2",
    "faker>=32.1.0",
    "icecream>=2.1.4",
    "numpy>=2.1.3",
    "opencv-python>=4.10.0.84",
    "pandas>=2.2.3",
    "pillow>=11.0.0",
    "pydantic>=2.10.6",
    "pytesseract>=0.3.13",
    "python-ffmpeg>=2.0.12",
    "pytorch-lightning>=2.4.0",
    "pyyaml>=6.0.2",
    "scikit-learn>=1.5.2",
    "scipy>=1.14.1",
    "tesseract>=0.1.3",
    "tqdm>=4.67.0",
    "urllib3>=2.2.3",
]

[project.urls]
Homepage = "https://info.coloreg.de"
Repository = "https://github.com/wg-lux/endoreg-db"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.setuptools]
packages = ["endoreg_db"]
